--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 	<link rel="preload" href="%sveltekit.assets%/fonts/Inter-VariableFont_slnt,wght.ttf" as="font" type="font/ttf"
 		crossorigin />
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/poke.png" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width" />
 	<title>Fancydex</title>
 	%sveltekit.head%
