--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,8 @@
 <html lang="en" class="dark">
 
 <head>
+	<script src="https://unpkg.com/@skeletonlabs/skeleton"></script>
+
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width" />
