--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" class="dark h-full">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-		<title>Fancydex</title>
 		%sveltekit.head%
 	</head>
-
-	<body data-sveltekit-preload-data="hover" data-theme="skeleton">
-		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
+	<body class="h-full" data-sveltekit-preload-data="hover" data-theme="skeleton">
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
