--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html lang="en" class="dark h-full">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
-	</head>
-	<body class="h-full" data-sveltekit-preload-data="hover" data-theme="skeleton">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+
+<head>
+  <script defer src="https://analytics.krenn.tech/script.js"
+    data-website-id="07f4836c-66bc-4866-9742-2105d2f277d9"></script>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+  <meta name="viewport" content="width=device-width" />
+  %sveltekit.head%
+</head>
+
+<body class="h-full" data-sveltekit-preload-data="hover" data-theme="skeleton">
+  <div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
