new analytics page

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark h-full">
 
 <head>
-  <script defer src="https://analytics.krenn.tech/script.js"
+  <script defer src="https://analytics.liamk.dev/script.js"
     data-website-id="07f4836c-66bc-4866-9742-2105d2f277d9"></script>
   <meta charset="utf-8" />
   <link rel="icon" href="%sveltekit.assets%/favicon.png" />
